umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrides_ph3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {:output {:atoms ["P#h3#n"] :bonds [] :charge 0 :spin "#u0#s1"} :success true}
  :counts {:output {:atoms ["P#h3#n"] :bonds [] :charge 0 :spin "#u0#s1"} :success true}}
