umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_adamantane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h#v3" "1" "C#h2#v2" "2" "C#h#v3" "3" "C#h2#v2" "4" "C#h#v3" "5" "C#h2#v2" "6" "C#h2#v2" "7" "C#h#v3" "8" "C#h2#v2" "9" "C#h2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "1"] ["4" "5" "1"] ["0" "5" "1"] ["0" "6" "1"] ["6" "7" "1"] ["7" "8" "1"] ["2" "8" "1"] ["4" "9" "1"] ["7" "9" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h#v3" "1" "C#h2#v2" "2" "C#h#v3" "3" "C#h2#v2" "4" "C#h#v3" "5" "C#h2#v2" "6" "C#h2#v2" "7" "C#h#v3" "8" "C#h2#v2" "9" "C#h2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["2" "3" "1"] ["3" "4" "1"] ["4" "5" "1"] ["0" "5" "1"] ["0" "6" "1"] ["6" "7" "1"] ["7" "8" "1"] ["2" "8" "1"] ["4" "9" "1"] ["7" "9" "1"]] :charge 0 :spin "#u0 #s1"}}}
